Fix X icon contrast in light mode

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -100,6 +100,11 @@
 .sidebar-social-link-x img {
   width: 0.85rem;
   height: 0.85rem;
+  filter: invert(1);
+}
+
+html[data-theme="dark"] .sidebar-social-link-x img {
+  filter: none;
 }
 
 .sidebar-theme-credit {
